--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,5 @@
 <h2>Koala - a directory Koala of attributes <a class="btn btn-sm btn-primary" href="http://localhost:1234/edit">Edit</a></h2>
-
+<h1>This is new from GitHub</h1>
 <ul class="list-group">
     <% attributes.forEach( function(attribute) { %>
         <li class="list-group-item">
